[gd_scene load_steps=2 format=3 uid="uid://cvpo0euieop71"]

[ext_resource type="Script" uid="uid://d1mlvtks4cbuw" path="res://debug_level_menu.gd" id="1_ykgub"]

[node name="DebugLevelMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ykgub")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 71
text = "Debug Level Menu"
horizontal_alignment = 1
vertical_alignment = 2

[node name="MainMenu" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "main menu"

[node name="HallwayTutorial" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "hallway (tutorial)"

[node name="Hallway" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "hallway"

[node name="ClassroomTutorial" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "classroom (tutorial)"

[node name="Classroom" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "classroom"

[connection signal="button_down" from="VBoxContainer/MainMenu" to="." method="_on_main_menu_button_down"]
[connection signal="button_down" from="VBoxContainer/HallwayTutorial" to="." method="_on_hallway_tutorial_button_down"]
[connection signal="button_down" from="VBoxContainer/Hallway" to="." method="_on_hallway_button_down"]
[connection signal="button_down" from="VBoxContainer/ClassroomTutorial" to="." method="_on_classroom_tutorial_button_down"]
[connection signal="button_down" from="VBoxContainer/Classroom" to="." method="_on_classroom_button_down"]
